Added moment dependency

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,8 @@
 	<script src="../bower_components/angular-route/angular-route.min.js"></script>
 	<script src="../bower_components/angular-resource/angular-resource.min.js"></script>
 	<script src="../bower_components/angular-cookies/angular-cookies.min.js"></script>
+	<script src="../bower_components/moment/min/moment.min.js"></script>
+	<script src="../bower_components/angular-moment-hijri/angular-moment-hijri.min.js"></script>
 
 	<!-- Minified Javascript -->
 	<script src="../static/js/min/etna_app-min.js"></script>
