Change module name from Personal to Profile

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 		</div>
 		<div class="links">
 			<a href="#/dashboard" ng-class="{ active : currentpage('/dashboard') }" class="collection-item"><i class="mdi-navigation-apps"></i> Dashboard</a>
-			<a href="#/personal" ng-class="{ active : currentpage('/personal') }" class="collection-item"><i class="mdi-action-account-circle"></i> Personal</a>
+			<a href="#/profile" ng-class="{ active : currentpage('/profile') }" class="collection-item"><i class="mdi-action-account-circle"></i> Personal</a>
 			<a href="#/courses" ng-class="{ active : currentpage('/courses') }" class="collection-item"><i class="mdi-communication-clear-all"></i> Courses</a>
 			<a href="#/assessment" ng-class="{ active : currentpage('/assessment') }" class="collection-item"><i class="mdi-maps-layers"></i> Assessment</a>
 			<a href="#/report" ng-class="{ active : currentpage('/report') }" class="collection-item"><i class="mdi-action-assessment"></i> Report</a>
