--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,8 @@
 	<script src="../bower_components/angular-cookies/angular-cookies.min.js"></script>
 	<script src="../bower_components/moment/min/moment.min.js"></script>
 	<script src="../bower_components/angular-moment-hijri/angular-moment-hijri.min.js"></script>
+	<script src="../bower_components/Chart.js/Chart.min.js"></script>
+	<script src="../bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
 
 	<!-- Minified Javascript -->
 	<script src="../static/js/min/etna_app-min.js"></script>
