--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,30 @@
 	<link rel="stylesheet" type="text/css" href="../static/css/etnatheme.css">
 </head>
 <body ng-controller="rootCtrl">
-	<div id="sidebar" ng-controller="sidebarCtrl">
+	<section id="navigation" ng-controller="sidebarCtrl">
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container-fluid">
+				<ul class="nav navbar-nav navbar-left">
+					<li class="profile">
+						<a href="#/">
+							<img class="" ng-src="{{ userdata.background.avatar }}">
+							{{ userdata.background.fullname }}
+						</a>
+					</li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="/index.html">Logout</a></li>
+				</ul>
+			</div>
+		</nav>
 		<!-- Please see the 'navigation' directive -->
-		<navigation></navigation>
-	</div>
+		<div id="sidebar">
+			<div class="brand"><span><i class="icon icon-vinyl"></i></span></div>
+			<ul class="links list-unstyled">
+				<li ng-repeat="nav in navigation" ng-class="{ active : currentpage('/'+ nav.name ) }"><a ng-href="#/{{ nav.name }}"><i class="icon icon-{{ nav.icon }}"></i> {{ nav.name }}</a></li>
+			</ul>
+		</div>
+	</section>
 
 	<!-- All templates will be rendered here -->
 	<section id="content" class="container-fluid">
@@ -29,6 +49,9 @@
 	<script src="../bower_components/angular-modal-service/dst/angular-modal-service.min.js"></script>
 	<script src="../bower_components/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
 	<script src="../bower_components/angular-1.3.7-bootstrap/ui-bootstrap-tpls.min.js"></script>
+
+	<script src="../bower_components/ng-file-upload-all.min.js"></script>
+	<script src="../bower_components/ng-file-upload-shim.min.js"></script>
 
 	<!-- Minified Javascript -->
 	<script src="../static/js/min/etna_app-min.js"></script>
